test/compile-error/sources/foo.move
module example::foo {
    struct Foo {
        x: u64
    }
}
